# backend/src/api/v1/reference/urls.py
@@ -1,0 +1,7 @@
+from django.urls import path
+
+from api.v1.reference.views import reference_localities
+
+urlpatterns = [
+    path("localities", reference_localities, name="reference-localities"),
+]
